--- a/source/topics/topics.bib
+++ b/source/topics/topics.bib
@@ -13,6 +13,10 @@
     url = {https://docs.conda.io/projects/conda-build/en/latest/concepts/recipe.html#conda-build-recipes},
     journal = {Conda} }
 
-https://docs.conda.io/projects/conda-build/en/latest/concepts/recipe.html#conda-build-recipes
-
-https://docs.conda.io/en/latest/miniconda.html#miniconda
+@misc{wiki:DevOps,
+    author = {Wikipedia},
+    title = {DevOps, Wikipedia, The Free Encyclopedia},
+    year = {2021},
+    howpublished = {\url{http://en.wikipedia.org/w/index.php?title=DevOps&oldid=1019937221}},
+    note = {[Online; accessed 27-April-2021]}
+}
