Logo added & DevOps

--- a/source/topics/topics.bib
+++ b/source/topics/topics.bib
@@ -18,5 +18,18 @@
     title = {DevOps, Wikipedia, The Free Encyclopedia},
     year = {2021},
     howpublished = {\url{http://en.wikipedia.org/w/index.php?title=DevOps&oldid=1019937221}},
-    note = {[Online; accessed 27-April-2021]}
-}
+    note = {[Online; accessed 27-April-2021]} }
+
+@misc{atlassian-gitflow,
+    title = {Gitflow Workflow: Atlassian Git Tutorial},
+    url = {https://www.atlassian.com/git/tutorials/comparing-workflows/gitflow-workflow},
+    key = {value},
+    journal = {Atlassian},
+    author = {Atlassian} }
+
+
+@misc{atlassian-ci-cd,
+    title = {Continuous Delivery: Get started with CI/CD},
+    url = {https://www.atlassian.com/continuous-delivery},
+    journal = {Atlassian},
+    key = {value},author = {Atlassian} }
