DevOps update and aesthetics

--- a/source/topics/topics.bib
+++ b/source/topics/topics.bib
@@ -33,3 +33,9 @@
     url = {https://www.atlassian.com/continuous-delivery},
     journal = {Atlassian},
     key = {value},author = {Atlassian} }
+
+@misc{preston-werner,
+    title = {Semantic Versioning 2.0.0},
+    url = {https://semver.org/},
+    journal = {Semantic Versioning},
+    author = {Preston-Werner, Tom} }
