bibtex entry created at bibtex.bib

--- a/bibtex.bib
+++ b/bibtex.bib
@@ -1,7 +1,15 @@
-@software{Tudat Developer0.0.11,
+@comment{@software{Tudat Developer0.0.11,
  author = {},
  date = {2021-05-03},
  title = {Tudat Developer},
+ url = {},
+ version = {0.0.11}
+}}
+
+@software{tudat_developer0.0.11,
+ author = {Test},
+ date = {2021-05-03},
+ title = {tudat_developer},
  url = {},
  version = {0.0.11}
 }
