Updates to code collaboration & release versioning

--- a/source/topics/topics.bib
+++ b/source/topics/topics.bib
@@ -39,3 +39,12 @@
     url = {https://semver.org/},
     journal = {Semantic Versioning},
     author = {Preston-Werner, Tom} }
+
+@misc{developer-primer0.0.1,
+    author = {G.H. Garrett},
+    date = {2021-05-03},
+    title = {developer-primer},
+    url = {https://github.com/tudat-team/developer-primer},
+    version = {0.0.1}
+}
+
