incorp style feedback

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@ All of the people who have made at least one contribution to Tudat Developer.
 Authors are sorted by number of commits.
 
 * Geoffrey H. Garrett
+* Jonas Hener
